--- a/tema01/t01_06.md
+++ b/tema01/t01_06.md
@@ -193,6 +193,21 @@ app.get('/contactos/telefono/:numero', (req, res) => {
 });
 ```
 
+#### 1.6.3.1 Parámetros de búsqueda (QueryParams)
+La cadena de búsqueda de una URL (Query string) es la parte de la URL que va detrás del cierre de interrogación (?). Por ejemplo: /personas?edad=44
+
+Cada pareja clave=valor es lo que se conoce como query parameter. Si una cadena de búsqueda tiene varias query parameter, estas irán separadas por &. Por ejemplo: /personas?edad=44&ciudad=Alicante
+
+Express automáticamete nos procesa los query parameters y nos los guarda en un objeto dentro de req.query
+
+```js
+app.get('*', (req, res) => {
+  req.query; // { edad: '44', ciudad: 'Alicante' }
+  res.json(req.query);
+});
+```
+
+
 > **Ejercicios propuestos:**
 > 
 > **1.** Modifica ahora el ejercicio **T1_Libros** que comenzaste en la sesión anterior, y adapta las respuestas de los dos servicios GET para que tengan el formato visto en el ejemplo anterior, incluyendo los códigos de estado pertinentes.
@@ -297,11 +312,23 @@ Observad cómo, en la sección *Body* elegimos tipo **raw**, y especificamos má
 
 Guardamos la petición y la podremos probar, para comprobar que inserta el contacto en la base de datos (si el nombre no existía ya) o da el correspondiente mensaje de error si es un contacto duplicado.
 
+#### 1.6.4.2. Prueba de servicios POST con Thunder Client
+
+Las peticiones POST difieren de las peticiones GET en que se envía cierta información en el cuerpo de la petición. Esta información normalmente son los datos que se quieren añadir en el servidor. ¿Cómo podemos hacer esto con ThunderClient?
+
+En primer lugar, creamos una nueva petición, elegimos el comando POST y definimos la URL (en este caso, localhost:8080/contactos). Entonces, hacemos clic en la pestaña Body, bajo la URL, y establecemos el tipo como JSON para que nos deje escribirlo en dicho formato. Después, en el cuadro de texto bajo estas opciones, especificamos el objeto JSON que queremos enviar para insertar:
+
+<div align="center">
+    <img src="../img/t01_thunderclient_request_post.png" width="60%" />
+</div>
+
+Al enviar la petición, podremos ver en el cuadro la respuesta (en este caso, el documento que se acaba de insertar).
+
 > **Ejercicios propuestos:**
 > 
 > **2.** Añade un servicio POST al ejercicio **T1_Libros** que reciba en el cuerpo de la petición los datos de un nuevo libro (id, título, autor y precio), en formato JSON, y los dé de alta en la colección siempre que el *id* no exista ya. Deberá devolver una respuesta similar a la del ejemplo de contactos, dependiendo de si se ha podido añadir o no el nuevo libro.
 > 
-> Añade también a la colección de Postman una nueva petición para probar este servicio.
+> Añade también a la colección de Postman y/o Thunder CLient una nueva petición para probar este servicio.
 
 ### 1.6.5. Servicios PUT
 
@@ -348,11 +375,20 @@ Para probar un servicio PUT con Postman, creamos la nueva petición, de tipo PUT
 
 Guardamos la petición y la podremos probar, para comprobar que modifica el contacto en la base de datos (si el nombre existe), o da el correspondiente error si no lo encuentra.
 
+#### 1.6.5.2. Prueba de servicios PUT con Thunder Client
+
+En el caso de peticiones PUT, procederemos de forma similar a las peticiones POST vistas antes: debemos elegir el comando (PUT en este caso), la URL, y completar el cuerpo de la petición con los datos que queramos modificar del contacto. En este caso, además, el id del contacto lo enviaremos también en la propia URL:
+
+<div align="center">
+    <img src="../img/t01_thunderclient_request_put.png" width="60%" />
+</div>
+
+
 > **Ejercicios propuestos:**
 > 
 > **3.** Añade un servicio PUT al ejercicio **T1_Libros** que reciba en la URL el id del libro a modificar, y en el cuerpo de la petición los nuevos datos del libro (sin incluir el id, que no se podrá cambiar), en formato JSON. Si el id del libro existe en la colección, modificará sus datos y devolverá una respuesta positiva, similar a la del ejemplo de contactos. En caso contrario, enviará una respuesta negativa.
 > 
-> Añade también a la colección de Postman una nueva petición para probar este servicio.
+> Añade también a la colección de Postman y/o Thunder Client una nueva petición para probar este servicio.
 
 ### 1.6.6. Servicios DELETE
 
@@ -396,11 +432,20 @@ La prueba de una petición DELETE con Postman es sencilla, muy similar a una pet
 
 Finalmente, podemos probar la petición con una clave existente y otra que no exista, para comprobar ambos funcionamientos.
 
+#### 1.6.6.2. Prueba de servicios DELETE con Thunder Client
+
+Para peticiones DELETE, la mecánica es similar a la ficha del contacto, cambiando el comando GET por DELETE, y sin necesidad de establecer nada en el cuerpo de la petición:
+
+<div align="center">
+    <img src="../img/t01_thunderclient_request_delete.png" width="60%" />
+</div>
+
+
 > **Ejercicios propuestos:**
 > 
 > **4.** Añade un servicio DELETE al ejercicio **T1_Libros** que reciba en la URL el código del libro a eliminar. Si existe, se eliminará de la colección y se enviará una respuesta positiva al cliente, y si no existe, una respuesta negativa, similar al ejemplo de los contactos.
 > 
-> Añade también a la colección de Postman una nueva petición para probar este servicio.
+> Añade también a la colección de Postman y/o Thunder Client una nueva petición para probar este servicio.
 
 
 ### 1.6.7. Persistencia de los datos JSON
