Revisado tema 2.4 mysql

--- a/tema02/t02_04.md
+++ b/tema02/t02_04.md
@@ -8,7 +8,7 @@ En esta sesión trataremos cómo conectar con un sistema SQL tradicional, como M
 
 Para empezar con la sesión actual, debemos tener MySQL correctamente instalado en nuestro sistema, y también es conveniente disponer de algún tipo de herramienta que nos permita crear y estructurar las bases de datos de forma gráfica.
 
-Para aunar estos dos conceptos, trabajaremos con un sistema AMPP, paquetes que integran en una sola instalación un servidor Apache, un servidor MySQL y el lenguaje PHP. El ejemplo más conocido de estos sistemas es **XAMPP**, aunque existen otros como WAMPP. La principal ventaja que ofrecen es que, además de instalar el servidor de bases de datos MySQL, nos ofrece un cliente web llamado **phpMyAdmin** para poder administrarla desde Apache. Esto nos vendrá bien para crear o importar las bases de datos de los distintos ejercicios.
+Para aunar estos dos conceptos, trabajaremos con un sistema XAMPP, paquetes que integran en una sola instalación un servidor Apache, un servidor MySQL y el lenguaje PHP. El ejemplo más conocido de estos sistemas es **XAMPP**, aunque existen otros como WAMPP. La principal ventaja que ofrecen es que, además de instalar el servidor de bases de datos MySQL, nos ofrece un cliente web llamado **phpMyAdmin** para poder administrarla desde Apache. Esto nos vendrá bien para crear o importar las bases de datos de los distintos ejercicios.
 
 #### 2.4.1.1. Instalación y puesta en marcha
 
@@ -20,7 +20,7 @@ Una vez descargado e instalado, en la carpeta de instalación tendremos un manag
     <img src="../img/t02_xampp_manager.png" width="70%" />
 </div>
 
-> **NOTA**: en el caso de **Linux**, debemos ejecutar el archivo *.run* que descarguemos desde algún terminal, con permisos de administrador (*sudo*). Después, el *manager* de XAMPP se encuentra en */opt/lampp/manager-linux-x64.run*. Podemos acceder a la carpeta desde el terminal para ejecutarlo, o bien crear algún acceso directo en otra ubicación que nos resulte más cómoda.
+> **NOTA**: en el caso de **Linux**, debemos ejecutar el archivo *.run* que descarguemos desde algún terminal, con permisos de administrador (*sudo*). Después, el *manager* de XAMPP se encuentra en */opt/lampp/manager-linux-x64.run*. Podemos acceder a la carpeta desde el terminal para ejecutarlo, o bien crear algún acceso directo en otra ubicación que nos resulte más cómoda. Tenemos otra opción que es ejecutar el siguiente comando `$sudo /opt/lampp/xampp start`, el cual nos arranca *Apache, MySQL y ProFTPD*. Si queremos ejecutar sólo un servicio o dos deberíamos usar en lugar de la acción *start* la opción *startapache* para iniciar Apache, *startmysql* para iniciar MySQL, o *startftp* para iniciar ProFTPD.
 
 Por defecto, Apache estará escuchando en el puerto 80 (o 443 para conexiones SSL), y MySQL en el 3306. Podemos modificar estos puertos en los respectivos archivos de configuración ("*httpd.conf*" y "*my.cnf*"), dentro de las carpetas de la instalación de XAMPP (la ubicación concreta de estos archivos varía entre versiones y entre sistemas operativos).
 
@@ -49,7 +49,7 @@ Conviene tener presente que la combinación de Node.js y MySQL no es demasiado h
 Sin embargo, también existen herramientas para poder trabajar con MySQL desde Node.js. Una de las más populares es la librería `mysql`, disponible en el repositorio NPM. Para ver cómo utilizarla, comenzaremos por crear un proyecto llamado "*PruebaMySQL*" en nuestra carpeta de "*ProyectosNode/Pruebas*". Crea dentro un archivo `index.js`, y ejecuta el comando `npm init` para inicializar el archivo `package.json`. Después, instalamos la librería con el correspondiente comando `npm install`:
 
 ```
-npm install mysql
+npm i mysql
 ```
 
 #### 2.4.2.1. Conexión a la base de datos
@@ -81,7 +81,7 @@ Después, podemos establecer la conexión con:
 ```js
 conexion.connect((error) => {
     if (error)
-        console.log("Error al conectar con la BD:", err);
+        console.log("Error al conectar con la BD:", error);
     else
         console.log("Conexión satisfactoria");
 });
@@ -100,17 +100,17 @@ La base de datos "contactos" tiene una tabla del mismo nombre, con los atributos
 Vamos a definir una consulta para obtener resultados y recorrerlos. Por ejemplo, mostrar todos los contactos:
 
 ```js
-conexion.query("SELECT * FROM contactos", 
-(error, resultado, campos) => {
-    if (error)
-        console.log("Error al procesar la consulta");
-    else {
-        resultado.forEach((contacto) => {
-            console.log(contacto.nombre, ":",
-                contacto.telefono));
+conexion.query("SELECT * FROM contactos",
+    (error, resultado, campos) => {
+        if (error)
+            console.log("Error al procesar la consulta");
+        else {
+            resultado.forEach((contacto) => {
+                console.log(contacto.nombre, ":", contacto.telefono);
+            });
         }
     }
-});
+);
 ```
 
 Notar que el método `query` tiene dos parámetros: la consulta a realizar, y un *callback* que recibe otros tres parámetros: el error producido (si lo hay), el conjunto de resultados (que se puede procesar como un vector de objetos), e información adicional sobre los campos de la consulta.
@@ -145,9 +145,9 @@ Si lo que queremos es realizar alguna modificación sobre los contenidos de la b
 Por ejemplo, si queremos insertar un nuevo contacto en la agenda y obtener el *id* que se le ha asignado, lo podemos hacer así:
 
 ```js
-conexion.query("INSERT INTO contactos" + 
-"(nombre, telefono) VALUES " +
-"('Fernando', '966566556')", (error, resultado, campos) => {
+conexion.query("INSERT INTO contactos (nombre, telefono) " +
+        "VALUES ('Fernando', '966566556')", 
+        (error, resultado, campos) => {
     if (error)
         console.log("Error al procesar la inserción");
     else
@@ -173,8 +173,7 @@ conexion.query("DELETE FROM contactos WHERE id > 4",
         if (error)
             console.log("Error al realizar el borrado");
         else
-            console.log(resultado.affectedRows, 
-                "filas afectadas");
+            console.log(resultado.affectedRows, "filas afectadas");
 });
 ```
 
@@ -262,7 +261,7 @@ app.get('/contactos', (req, res) => {
                .send({ ok: true, 
                        resultado: resultado});
     });
-})
+});
 ```
 
 Para la consulta parametrizada para buscar por *id*, el código es el siguiente:
