--- a/tema02/t02_05.md
+++ b/tema02/t02_05.md
@@ -10,10 +10,10 @@ Para el ejemplo que vamos a seguir en los siguientes apartados, vamos a crear un
 
 La instalación de Sequelize es igual de sencilla que la de cualquier otro módulo de Express, a través del comando `npm`. Además, Sequelize se apoya en otras librerías para poder comunicarse con la base de datos correspondiente, y convertir así los registros en objetos y viceversa. Es lo que la propia librería denomina "dialectos" (*dialects*), y debemos incluir la(s) librería(s) del dialecto o SGBD que hayamos seleccionado.
 
-En nuestro caso, vamos a trabajar con bases de datos MariaDB, por lo que necesitaremos incluir la librería con el *driver* correspondiente para conectar: `mariadb`, además de la propia `sequelize`. Para nuestro ejemplo, instalaremos también Express para implementar unos servicios REST básicos, y *body-parser* para procesar datos de las peticiones.
+En nuestro caso, vamos a trabajar con bases de datos MariaDB, por lo que necesitaremos incluir la librería con el *driver* correspondiente para conectar: `mariadb`, además de la propia `sequelize`. Para nuestro ejemplo, instalaremos también Express para implementar unos servicios REST básicos, y usaremos la función de middleware *express.json()*, incorporada en Express, para procesar datos de las peticiones.
 
 ```
-npm install sequelize mariadb express body-parser
+npm install sequelize mariadb express
 ```
 
 Después, debemos incorporar Sequelize a los archivos fuente que lo necesiten en nuestro proyecto, con la correspondiente instrucción `require`. Creamos un archivo `index.js` en nuestro proyecto de pruebas creado anteriormente, y añadimos este código:
@@ -92,7 +92,7 @@ module.exports = (sequelize, Sequelize) => {
 
 Observa que, en ambos archivos, a la propiedad `module.exports` le asociamos una función que recibe dos parámetros, que hemos llamado `sequelize` y `Sequelize`. Serán dos datos que llegarán de fuera cuando carguemos estos archivos, y proporcionarán la conexión a la base de datos y el acceso a la API de Sequelize, respectivamente.
 
-Como puedes ver, hemos exportado cada modelo para poder ser utilizado desde otros archivos de nuestra aplicación. En [esta página](https://sequelize.org/v5/manual/data-types.html) puedes consultar los tipos de datos disponibles para definir los modelos en Sequelize. También puedes ver [aquí](https://sequelize.org/v5/manual/models-definition.html#validations) algunos validadores que podemos aplicar a cada campo, como por ejemplo comprobar si es un e-mail, si tiene un valor mínimo y/o máximo, etc.
+Como puedes ver, hemos exportado cada modelo para poder ser utilizado desde otros archivos de nuestra aplicación. En [esta página](https://sequelize.org/docs/v6/core-concepts/model-basics/#data-types) puedes consultar los tipos de datos disponibles para definir los modelos en Sequelize. También puedes ver [aquí](https://sequelize.org/docs/v6/core-concepts/validations-and-constraints/#per-attribute-validations) algunos validadores que podemos aplicar a cada campo, como por ejemplo comprobar si es un e-mail, si tiene un valor mínimo y/o máximo, etc.
 
 #### 2.5.2.1. Relaciones entre modelos
 
@@ -129,7 +129,7 @@ Libro.belongsTo(Autor);
 Autor.hasMany(Libro);
 ```
 
-En ambos casos, lo que se va a crear es una clave ajena en la tabla `libros` que se va a llamad `autorId`. Podemos elegir el nombre de dicha clave ajena añadiendo un parámetro de configuración llamado `foreignKey`. También se crearán unos métodos *get/set* para acceder al objeto vinculado (al autor en este caso, a partir del libro). El nombre de dichos *get/set* se puede especificar con un atributo de configuración llamado `as`. Así, nuestra relación entre libros y autores podemos definirla así:
+En ambos casos, lo que se va a crear es una clave ajena en la tabla `libros` que se va a llamar `autorId`. Podemos elegir el nombre de dicha clave ajena añadiendo un parámetro de configuración llamado `foreignKey`. También se crearán unos métodos *get/set* para acceder al objeto vinculado (al autor en este caso, a partir del libro). El nombre de dichos *get/set* se puede especificar con un atributo de configuración llamado `as`. Así, nuestra relación entre libros y autores podemos definirla así:
 
 ```js
 Libro.belongsTo(Autor, {foreignKey: 'idAutor', as: 'Autor'});
@@ -267,12 +267,11 @@ module.exports = (express, Libro, Autor) => {
 
 > **NOTA**: observad que en el caso de estos enrutadores, también reciben unos parámetros externos: la instancia de Express ya creada, y los modelos de autores y/o libros. Estos datos se los pasaremos desde el programa principal cuando incorporemos estos archivos.
 
-En el programa principal `index.js`, cargamos las librerías de Express y *body-parser*, y los enrutadores asociados a las rutas `/autores` y `/libros`, respectivamente. Finalmente, ponemos en marcha el servidor express tan pronto como se produzca la sincronización con la base de datos. Nos quedará algo así:
+En el programa principal `index.js`, cargamos las librerías de Express, la función de middleware express.json(), y los enrutadores asociados a las rutas `/autores` y `/libros`, respectivamente. Finalmente, ponemos en marcha el servidor express tan pronto como se produzca la sincronización con la base de datos. Nos quedará algo así:
 
 ```js
 const Sequelize = require('sequelize');
 const express = require('express');
-const bodyParser = require('body-parser');
 
 const ModeloAutor = require(__dirname + "/models/autor");
 const ModeloLibro = require(__dirname + "/models/libro");
@@ -294,7 +293,7 @@ const libros = routerLibros(express, Libro, Autor);
 
 let app = express();
 
-app.use(bodyParser.json());
+app.use(express.json());
 app.use('/libros', libros);
 app.use('/autores', autores);
 
