actualizado t02_03 body-parser

--- a/tema02/t02_03.md
+++ b/tema02/t02_03.md
@@ -212,7 +212,6 @@ El servidor principal ve muy aligerado su código. Básicamente se encargará de
 // Librerías externas
 const express = require('express');
 const mongoose = require('mongoose');
-const bodyParser = require('body-parser');
 
 // Enrutadores
 const mascotas = require(__dirname + '/routes/mascotas');
@@ -226,7 +225,7 @@ mongoose.connect('mongodb://localhost:27017/contactos',
 let app = express();
 
 // Carga de middleware y enrutadores
-app.use(bodyParser.json());
+app.use(express.json());
 app.use('/mascotas', mascotas);
 app.use('/restaurantes', restaurantes);
 app.use('/contactos', contactos);
@@ -251,9 +250,9 @@ Los enrutadores se cargan como *middleware*, empleando `app.use`. En esa instruc
 
 ### 2.3.2. Otros conceptos adicionales 
 
-#### 2.3.2.1. Más sobre *body-parser*
+#### 2.3.2.1. Más sobre los datos de la petición
 
-Existen otras posibilidades de uso del *middleware body-parser*. En los ejemplos anteriores lo hemos empleado para procesar cuerpos con formato JSON. Pero es posible también que empleemos formularios tradicionales HTML, que envían los datos como si fueran parte de una *query-string*, pero por POST. Por ejemplo:
+Existen otras posibilidades de uso del *middleware* para el procesamiento de las peticiones POST y PUT. En los ejemplos anteriores lo hemos empleado para procesar cuerpos con formato JSON. Pero es posible también que empleemos formularios tradicionales HTML, que envían los datos como si fueran parte de una *query-string*, pero por POST. Por ejemplo:
 
 ```
 nombre=Nacho&telefono=911223344&edad=39
@@ -262,8 +261,8 @@ nombre=Nacho&telefono=911223344&edad=39
 Para procesar contenidos de este otro tipo, basta con añadir de nuevo la librería como *middleware*, indicando en este caso otro método:
 
 ```js
-app.use(bodyParser.json());
-app.use(bodyParser.urlencoded({extended:false}));
+app.use(express.json());
+app.use(express.urlencoded({extended:false}));
 ```
 
 En este caso, el servidor Express aceptaría datos de la petición tanto en formato JSON como en formato *query-string*. El parámetro `extended` indica qué tipo de *parser* queremos utilizar para procesar los datos de la petición: si lo dejamos a `false`, emplearemos la librería *querystring*, y si está a `true`, se empleará la librería *qs*, con algunas opciones algo más avanzadas para incluir objetos más complejos.
