--- a/tema02/practicas/t02_2022_2023.md
+++ b/tema02/practicas/t02_2022_2023.md
@@ -104,7 +104,7 @@ Los criterios para calificar esta práctica son los siguientes:
 
 * Si algún servicio no recibe o devuelve los atributos con el nombre indicado, o no responde a la URI indicada, se calificará con **0 puntos**, independientemente de lo bien o mal que esté su código
 
-> **Ejemplo**: si en el servicio `POST /juegos` recibi un campo `nombreJuego` en lugar del original `nombre` que figura en el esquema, el servicio se calificará con un 0.
+> **Ejemplo**: si en el servicio `POST /juegos` recibe un campo `nombreJuego` en lugar del original `nombre` que figura en el esquema, el servicio se calificará con un 0.
 
 > **Ejemplo 2**: si en el servicio `GET /juegos` enviamos en el objeto de respuesta un atributo `result`, en lugar de uno `resultado`, el servicio se calificará con un 0.
 
