--- a/tema02/practicas/t02_2022_2023_val.md
+++ b/tema02/practicas/t02_2022_2023_val.md
@@ -73,7 +73,7 @@ El servidor principal deurà:
 * Carregar les llibreries necessàries (almenys, *express* i *mongoose*)
 * Carregar els encaminadors de juegos
 * Connectar a una base de dades "juegos" de MongoDB
-* Inicialitzar *Express, i aplicar el middleware de *express.json* per a processar dades en format JSON, i associar els encaminadors respectivament a les rutes de `/juegos`.
+* Inicialitzar Express, i aplicar el middleware de *express.json* per a processar dades en format JSON, i associar els encaminadors respectivament a les rutes de `/juegos`.
 * Posar en marxa el servidor Express pel port 8080.
 
 ### 5. Proves amb Postman o Thunder Client
@@ -84,7 +84,7 @@ Es demana, a més, que elaboreu una col·lecció de proves Postman o THunder Cli
 
 Haureu d'entregar un arxiu ZIP o similar, amb el vostre nom i el prefix "PracT2". Per exemple, si us dieu José Pérez, l'arxiu de lliurament haurà de ser `PracT2_Jose_Perez.zip`. Dins, haurà de contindre:
 
-* El projecte **playREST_V2** de *Node, sense que continga la carpeta `node_modules`.
+* El projecte **playREST_V2** de Node, sense que continga la carpeta `node_modules`.
 * L'arxiu de Postman o Thunder Client exportat, amb les proves de la col·lecció.
 
 #### 6.1. Qualificació de la pràctica
@@ -98,7 +98,7 @@ Els criteris per a qualificar aquesta pràctica són els següents:
 * Encaminadors: **3,5 puntos**, repartits així:
    * Serveis implementats: **0,5 puntos** cada servei (7 en total)
 * Funcionalitat de l'arxiu principal  `index.js`: **1 puntos**
-* Col·lecció *Postman, amb els serveis correctament afegits per a provar-se: **1,75 puntos** (*0,25 punts* per a cada petició)
+* Col·lecció Postman, amb els serveis correctament afegits per a provar-se: **1,75 puntos** (*0,25 punts* per a cada petició)
 * Claredat i neteja del codi, i ús d'un comentari inicial en cada fitxer font explicant què fa: **0,5 puntos**.
 
 **Penalitzacions a tindre en compte**
