metodo update runValidators

--- a/tema02/t02_01.md
+++ b/tema02/t02_01.md
@@ -508,7 +508,22 @@ Contacto.findByIdAndUpdate('5a0e1991075e9407c4da8b0a',
 });
 ```
 
-El tercer parámetro que recibe `findByIdAndUpdate` es un conjunto de opciones adicionales. Por ejemplo, la opción `new` que se ha usado en este ejemplo indica si queremos obtener como resultado el nuevo objeto modificado (`true`) o el antiguo antes de modificarse (`false`, algo útil para operaciones de deshacer).
+El tercer parámetro que recibe `findByIdAndUpdate` es un conjunto de opciones adicionales. Por ejemplo, la opción `new` que se ha usado en este ejemplo indica si queremos obtener como resultado el nuevo objeto modificado (`true`) o el antiguo antes de modificarse (`false`, algo útil para operaciones de deshacer). También podemos pasarle como tercer parámetro la opción `runValidators`, que nos permite validar los campos que modificamos, por defecto esta opción está desactivada y para poder validar los campos debemos darle el valor a `true`.
+
+Al intentar modificar un contacto con una edad incorrecta, salta al bloque `catch`. Por ejemplo, este contacto es demasiado viejo, según la definición del esquema:
+
+```js
+Contacto.findByIdAndUpdate('5a0e1991075e9407c4da8b0a', 
+    { nombre: 'Mario Iborra', edad: 10 } , { new: true, runValidators: true })
+.then(resultado => {
+    console.log("Modificado contacto:", resultado);
+}).catch (error => {
+    console.log("ERROR:", error);
+});
+```
+
+> **NOTA:** Por defecto, la validación en los [métodos update](https://mongoosejs.com/docs/validation.html#update-validators) están desactivada, y cada vez que queramos modificar uno o varios campos debemos poner la opción de runValidators si queremos que ese campo se valide y cumplir los requisitos especificados en nuestro schema.
+
 
 **El método *updateMany* y *updateOne*** 
 
@@ -518,6 +533,8 @@ El método *updateOne* actualiza sólo el primer documento que cumple con el fil
 Contacto.updateMany({nombre: 'Nacho'}, { edad: 20 })
 .then(...
 ```
+
+
 
 **Actualizar la versión del documento**
 
