--- a/tema03/t03_01.md
+++ b/tema03/t03_01.md
@@ -564,11 +564,14 @@ Para mostrar esta vista, habrá un enlace "Nuevo contacto" en el menú de navega
 
 ```html
 
-<div class="alert alert-secondary">
-    <a href="/contactos">Listado de contactos</a>
-    &nbsp;&nbsp;
-    <a href="/contactos/nuevo">Nuevo contacto</a>
-</div>
+<ul class="nav text-bg-primary p-3">
+    <li class="nav-item">
+        <a class="nav-link text-bg-primary" aria-current="page" href="/contactos">Listado de contactos</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link text-bg-primary" href="/contactos/nuevo">Nuevo contacto</a>
+    </li>
+</ul>
 ```
 
 **La ruta para mostrar el formulario**
