--- a/tema03/t03_04.md
+++ b/tema03/t03_04.md
@@ -32,13 +32,20 @@ Obtendremos una salida similar a esta (variando los números de versión):
 
 ```
 [System Information]
-OS Version     : macOS High Sierra
-NodeJS Version : v12.5.0
-NPM Version    : 6.9.0
-[Nest Information]
-platform-express version : 6.7.2
-common version           : 6.7.2
-core version             : 6.7.2
+OS Version     : Linux 5.15
+NodeJS Version : v18.12.1
+NPM Version    : 8.19.2 
+
+[Nest CLI]
+Nest CLI Version : 9.1.5 
+
+[Nest Platform Information]
+platform-express version : 9.2.0
+schematics version       : 9.0.3
+testing version          : 9.2.0
+common version           : 9.2.0
+core version             : 9.2.0
+cli version              : 9.1.5
 ```
 
 #### 3.4.1.1. Estructura de un proyecto Nest.js
@@ -184,7 +191,7 @@ Esta interfaz se puede incorporar al servicio o servicios que vayan a hacer uso 
 
 ```js
 import { Injectable } from '@nestjs/common';
-import { Contacto } from './interfaces/contacto.interface';
+import { Contacto } from './interfaces/contacto/contacto.interface';
 
 @Injectable()
 export class ContactoService {
@@ -276,7 +283,6 @@ A la hora de emitir una respuesta, deberemos devolver (`return`) un resultado. N
 @Get()
 listar() {
     return {
-        ok: true;
         resultado: ... // Datos buscados
     };
 }
@@ -301,7 +307,7 @@ Podemos importar este DTO desde el controlador, y utilizarlo en los *handlers* d
 ```js
 import { Controller, Get, Post, Body, Param } 
     from '@nestjs/common';
-import { ContactoDto } from './dto';
+import { ContactoDto } from './dto/contacto-dto/contacto-dto';
 
 @Controller('contacto')
 export class ContactoController { 
