Actualizados pdf 3.1 al 3.3

--- a/tema03/practicas/t03_2022_2023.md
+++ b/tema03/practicas/t03_2022_2023.md
@@ -72,19 +72,19 @@ Para dejar unos usuarios previamente almacenados y que la aplicación no tenga q
 const mongoose = require('mongoose');
 const Usuario = require(__dirname + '/../models/usuario');
 
-mongoose.connect('mongodb://localhost:27017/playrest_v3');
+mongoose.connect('mongodb://127.0.0.1:27017/playrest_v3');
 
 Usuario.collection.drop();
 
 let usu1 = new Usuario({
-    login: 'may',
-    password: '1234'
+    login: 'maycalle',
+    password: '12345678'
 });
 usu1.save();
 
 let usu2 = new Usuario({
-    login: 'nacho',
-    password: '5678'
+    login: 'rosamaria',
+    password: '87654321'
 });
 usu2.save();
 ```
