--- a/tema03/t03_04.md
+++ b/tema03/t03_04.md
@@ -74,6 +74,11 @@ El asistente de creación del proyecto lo habrá dejado todo preparado, con las 
 npm run start
 ```
 
+o con :dev que nos permite recompilar automáticamente cuando guardamos un archivo. 
+```
+npm run start --watch
+```
+
 Si intentamos acceder a `http://localhost:3000` veremos un mensaje de bienvenida proporcionado por el módulo principal ("Hello World!").
 
 #### 3.4.1.3. Conexión con Express
@@ -133,6 +138,12 @@ Del mismo modo, podemos generar controladores y servicios, con estos comandos:
 ```
 nest g controller nombre_controlador
 nest g service nombre_servicio
+```
+Otra posibilidad para generar los controladores y servicios es usando su alias: 
+
+```
+nest g co nombre_controlador
+nest g s nombre_servicio
 ```
 
 Si seguimos con el caso anterior, podemos crear un controlador llamado `contacto` y un servicio con el mismo nombre. Esto generará respectivamente los archivos `src/contacto/contacto.controller.ts` y `src/contacto/contacto.service.ts` en nuestro proyecto.
@@ -217,7 +228,7 @@ export class ContactoDto {
 
 > **Ejercicios propuestos**
 > 
-> **2.** Sobre el proyecto anterior, crea ahora la interfaz `tarea` en la subcarpeta `interfaces`, con el comando `nest g interface tarea/interfaces/tarea`. Define los siguientes campos para cada tarea que vamos a gestionar:
+> **2.** Sobre el proyecto anterior, crea ahora la interfaz `tarea` en la subcarpeta `interfaces`, con el comando `nest g itf tarea/interfaces/tarea`. Define los siguientes campos para cada tarea que vamos a gestionar:
 > 
 > * Un `id` de tipo texto
 > * El `nombre` de la tarea (texto)
@@ -226,7 +237,7 @@ export class ContactoDto {
 > 
 > Añade un array de tareas (objetos de la interfaz `Tarea` que acabas de crear) en el servicio de la tarea (`src/tarea/tarea.service.ts`).
 > 
-> Después, crea un DTO llamado `TareaDto` con el comando `nest g class tarea/dto/TareaDto`. Define dentro los mismos campos que hemos definido para la interfaz (salvo el *id*), de tipo *sólo lectura*.
+> Después, crea un DTO llamado `TareaDto` con el comando `nest g cl tarea/dto/TareaDto`. Define dentro los mismos campos que hemos definido para la interfaz (salvo el *id*), de tipo *sólo lectura*.
 
 
 ### 3.4.3. Más sobre los controladores
@@ -409,7 +420,7 @@ prueba() {
 Vamos ahora a conectar desde Nest con una base de datos MongoDB. Utilizaremos Mongoose, como hemos venido haciendo en temas anteriores, pero esta vez lo haremos a través de una librería puente de Nest, llamada `@nestjs/mongoose`. Por lo tanto, debemos instalar ambas librerías en nuestro proyecto:
 
 ```
-npm install @nestjs/mongoose mongoose
+npm i @nestjs/mongoose mongoose
 ```
 
 #### 3.4.4.1. Conectando a la base de datos
@@ -528,12 +539,36 @@ export class ContactoController {
         return this.contactoService.listar();
     }
 
+    // GET /contacto/buscar/:id
+    @Get('buscar/:id')
+    async buscarPorId(@Param('id') id: string) {
+        try {
+            let resultado = await this.contactoService.buscarPorId(id);
+            if (resultado) return {resultado: resultado};
+            throw new Error();
+        } catch(Error) {
+            return { error: 'Error buscando al contacto' };
+        }
+    }
+
     // POST /contacto
     @Post()
     async crear(@Body() crearContactoDto: ContactoDto) {
         return this.contactoService.insertar(crearContactoDto);
     }
+    
+    // PUT /contacto/:id
+    @Put(':id')
+    actualizar(@Param('id') id: string, 
+        @Body() actualizarContactoDto: ContactoDto) {
+        return this.contactoService.actualizar(id, actualizarContactoDto);
+    }
 
+    // DELETE /contacto/:id
+    @Delete(':id')
+    borrar(@Param('id') id: string) {
+        return this.contactoService.borrar(id);
+    }
     ...
 }
 ```
@@ -550,13 +585,44 @@ Notar que en el constructor del controlador inyectamos el servicio, y luego pode
 > * Modificaremos el controlador de tareas para hacer uso de los métodos del servicio en cada *handler*. Haz también asíncronos los métodos del controlador.
 > 
 > Prueba el funcionamiento adecuado de todos los servicios desde la colección de Postman que habrás creado previamente.
+>
+### 3.4.5. Autenticación en Nest.js usando [JWT](https://jwt.io/).
+En el tema 3.2 vimos cómo usar la autenticación para loguearnos a nuestras aplicaciones. En este punto vamos a ver cómo usar la autenticación en Nestjs en el lado del servidor usando [JSON Web Token](https://github.com/nestjs/jwt).
+Para ello, lo usuarios se autenticarán mediante usuario/contraseña devolviendo un JWT apra usar en las llamadas donde la API esté protegida. Para ello debemos instalar los siguientes paquetes:
 
-### 3.4.5. Vistas y contenido estático en Nest.js
+```
+npm install --save @nestjs/jwt passport-jwt
+npm install --save-dev @types/passport-jwt
+```
+
+El paquete @nestjs/jwt que hemos instalado es el que tiene las utilidades para manipular JWT. El paquete passport-jwt es el encargado de implementar la estrategia JWT y @types/passport-jwt proporciona las definiciones de tipos de TypeScript.
+
+Con el objetivo de encapsular las operaciones de los usuarios, vamos a generar un módulo y su servicio:
+
+```
+nest g module users
+nest g service users
+```
+En el servicio, vamos a reemplazar el código que nos genera por defecto, por el que tenemos a continuación. En este caso vamos a tener el listado de usuarios en el fichero, pero debemos tener en cuenta que en una aplicación real nosotros deberíamos tener estos datos usando un modelo de datos TypeORM, Sequelize, Mongoose, etc.)
+```js
+
+
+```
+
+Veamos un ejemplo de cómo gestionar una petición POST /auth/login. Para ello, lo primero que haremos será crearnos el servicio de autenticación (auth). `nest g service auth`. Y en el fichero `auth.service.ts` añadiremos el método `login`, e importamos la librería `JwtService`
+
+```js
+
+
+```
+
+
+### 3.4.6. Vistas y contenido estático en Nest.js
 
 Desde Nest.js también podemos emplear nuestro motor de plantillas preferido y renderizar las vistas que queramos. En nuestro caso, volveremos a utilizar Nunjucks, como en sesiones anteriores. Lo primero que debemos hacer es instalar la librería. También podemos instalar Bootstrap de paso, si tenemos pensado utilizarlo:
 
 ```
-npm install nunjucks bootstrap
+npm i nunjucks bootstrap
 ```
 
 Después, editamos el archivo principal `main.ts`. Debemos importar por un lado la librería `nunjucks`, y por otra, el objeto `NestExpressApplication`, ya que ahora necesitamos especificar que nuestra aplicación Nest.js se va a apoyar en Express para utilizar los métodos asociados para la gestión del motor de plantillas.
