--- a/tema03/practicas/t03_2022_2023.md
+++ b/tema03/practicas/t03_2022_2023.md
@@ -4,6 +4,8 @@
 
 Siguiendo con la temática de prácticas anteriores, vamos a desarrollar una aplicación web completa para gestión y visualización de una serie de juegos de mesa, aprovechando gran parte de la lógica implementada en la práctica del tema anterior.
 
+Opcionalmente, adaptando lo que se explica en el enunciado, si se desarrolla la práctica con Nest, se podrán obtener hasta 2 puntos extra en la calificación final.
+
 ### 1. Estructura de la aplicación
 
 Crearemos una aplicación llamada **playREST_V3**, e instalaremos dentro los módulos siguientes:
@@ -16,7 +18,7 @@ Crearemos una aplicación llamada **playREST_V3**, e instalaremos dentro los mó
 * *method-override* para simular peticiones PUT y DELETE
 * *bootstrap* para los estilos generales de la aplicación
 * *multer* para subidas de imágenes de juegos
-* ... cualquier otro módulo que quieras utilizar
+* ... cualquier otro módulo que quieras utilizar.
 
 Recuerda primero inicializar el archivo `package.json` con `npm init`, y después instala los módulos con `npm install`.
 
@@ -26,8 +28,8 @@ Internamente, la aplicación estará compuesta de:
 * Carpeta `models` donde almacenaremos los esquemas y modelos de la aplicación. Serán una versión reducida de los de la práctica anterior, como se comentará a continuación.
 * Carpeta `routes` con los distintos enrutadores que se detallarán más adelante.
 * Carpeta `views` con las vistas que definiremos, y que se explicarán más adelante.
-* Carpeta `public` con cierto contenido estático. En concreto, habrá un archivo CSS en `public/css/estilos.css` con los estilos propios que queráis definir, y una carpeta `public/uploads` para subir las imágenes de los juegos.
-* Carpeta `utils` con algunos ficheros de utilidad que se comentarán más adelante.
+* Carpeta `public` con cierto contenido estático. En concreto, habrá un archivo CSS en `public/css/estilos.css` con los estilos propios que queráis definir, y una carpeta `public/uploads` para subir las imágenes de los juegos. Si lo vas a realizar el proyecto con Nest.js **también** deberás tener este directorio
+* Carpeta `utils` con algunos ficheros de utilidad que se comentarán más adelante. 
 
 ### 2. Definiendo esquemas y modelos
 
@@ -107,7 +109,7 @@ Si se produce algún error no contemplado en cualquiera de las rutas (es decir, 
 
 En el enrutador `juegos.js` se definirán las siguientes rutas:
 
-* `GET /`: renderizará la vista `admin_juegos` pasándole como parámetro el listado de juegos.
+* `GET /juegos`: renderizará la vista `admin_juegos` pasándole como parámetro el listado de juegos.
 * `GET /juegos/nuevo`: renderizará la vista `admin_juegos_form`.
 * `GET /juegos/editar/:id`: renderizará la vista `admin_juegos_form` pasándole como parámetro el juego con el *id* indicado. Si no se encuentra el juego, se renderizará la vista `admin_error` con el mensaje "Juego no encontrado".
 * `POST /juegos`: recogerá de la petición los datos del juego, hará la inserción y, si todo ha sido correcto, redirigirá a la ruta base de este enrutador.
@@ -122,11 +124,10 @@ En el caso de los métodos POST y PUT, si se sube alguna imagen del juego, se ut
 
 #### 3.3. La autenticación de usuarios
 
-En el enrutador `auth.js` se definirán las siguientes rutas:
+* `GET /auth/login`: renderizará la vista `auth_login`.
+* `POST /auth/login`: recogerá de la petición el login y password del usuario que intenta acceder y comprobará si son válidos. Si lo son, almacenará en sesión el login del usuario, y redirigirá a la ruta base del enrutador de juegos. Si falla, renderizará el formulario de `auth_login` pasándole el mensaje de error de "Usuario incorrecto", para que se muestre en dicho formulario.
+* `GET /auth/logout`: destruirá la sesión del usuario actual y redirigirá a la raíz de la parte pública.
 
-* `GET /login`: renderizará la vista `auth_login`.
-* `POST /login`: recogerá de la petición el login y password del usuario que intenta acceder y comprobará si son válidos. Si lo son, almacenará en sesión el login del usuario, y redirigirá a la ruta base del enrutador de juegos. Si falla, renderizará el formulario de `auth_login` pasándole el mensaje de error de "Usuario incorrecto", para que se muestre en dicho formulario.
-* `GET /logout`: destruirá la sesión del usuario actual y redirigirá a la raíz de la parte pública.
 
 #### 3.4. Definiendo la zona de acceso restringido
 
